# cmd-keeper

./: .editorconfig  .gitignore  Cargo.toml  README.md  README_ja.md  cliff.toml  clippy.toml  demo.tape  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  release.yml  security.yml  stale.yml
docs/: demo-recording.md  homebrew-formula.rb
src/: cli.rs  error.rs  main.rs  models.rs  storage.rs
src/commands/: add.rs  copy.rs  delete.rs  edit.rs  list.rs  mod.rs  search.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
