[package]
name = "cmd-keeper"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to save, manage, and search frequently used commands"
repository = "https://github.com/yourusername/cmd-keeper"
license = "MIT"
keywords = ["cli", "command", "manager", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
# CLI argument parsing with derive macros
clap = { version = "4.5", features = ["derive"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# OS-specific directories (e.g., ~/.config)
dirs = "6.0"

# Beautiful table output
tabled = "0.16"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Clipboard support (optional feature)
arboard = "3.4"

# Colored terminal output
colored = "2.1"

[dev-dependencies]
# Temporary file/directory for testing
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
strip = true

